# XClient

./: .gitmodules  CMakeLists.txt  build_dll_version.cmd  build_exe_lua_version.cmd  build_exe_no_lua_version.cmd  build_exe_version.cmd
assets/overviews/: cs_downed_cz.txt  cs_havana_cz.txt  cs_italy_cz.txt  cs_militia_cz.txt  cs_office_cz.txt  cz_map_select.txt  de_airstrip_cz.txt  de_aztec_cz.txt  de_chateau_cz.txt  de_clan1_mill.txt  de_corruption_cz.txt  de_dust2_2x2.txt  de_dust_cz.txt  de_fastline_cz.txt  de_inferno_cz.txt  de_piranesi_cz.txt  de_prodigy_cz.txt  de_sienna_cz.txt  de_stadium_cz.txt  de_tides_cz.txt  de_torn_cz.txt  de_truth_cz.txt  de_vostok_cz.txt  dod_anzio.txt  dod_avalanche.txt  dod_caen.txt  dod_charlie.txt  dod_chemille.txt  dod_donner.txt  dod_escape.txt  dod_falaise.txt  dod_flash.txt  dod_flugplatz.txt  dod_forest.txt  dod_glider.txt  dod_jagd.txt  dod_kalt.txt  dod_kraftstoff.txt  dod_merderet.txt  dod_northbound.txt  (+5 more)
assets/scripting/: buffer.lua  gmsg.lua  main.lua  move.lua  nav.lua  tests.lua  utils.lua  vec3.lua
ios/: Info.plist  app_delegate.mm
src/: ai_client.cpp  ai_client.h  application.cpp  application.h  gameplay_screen.cpp  gameplay_screen.h  main.cpp  mod.cpp  mod.h  mod_cs.cpp  mod_cs.h
